--- a/HW1/PHP/public_html/css/main.css
+++ b/HW1/PHP/public_html/css/main.css
@@ -23,6 +23,10 @@ form input[type=text]{
   border-radius: 5px;
 }
 
+input[type="radio"] {
+  margin-right: 0;
+}
+
 fieldset{
   background: #FFFFFF;
   border: 1px solid #CCCCCC;
