added the user detail page

--- a/HW1/static/css/main.css
+++ b/HW1/static/css/main.css
@@ -57,3 +57,15 @@ fieldset > div{
 .btn-primary:hover{
     opacity: 0.8;
 }
+
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
