--- a/project/templates/show_entries.html
+++ b/project/templates/show_entries.html
@@ -5,6 +5,8 @@
       <dl>
         <dt>Title:
         <dd><input type="text" size="30" name="title">
+        <dt>Tag:
+        <dd><input type="text" size="30" name="tag">
         <dt>Text:
         <dd><textarea name="text" rows="5" cols="40"></textarea>
         <dd><input type="submit" value="Share">
