--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -26,7 +26,7 @@ h2 {
   padding: 0;
 }
 
-.questions .row, .answer, h2, .question, .tags{
+.questions .row, .answer, h2, .question, .tags, .button-row{
   margin: 8px;
 }
 .questions .row input{
@@ -34,7 +34,17 @@ h2 {
   border: none;
   text-decoration: underline;
   color: #155674;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display:none;
+  text-align: left;
 }
+
+/*.question{
+  display: none;
+}*/
 
 .answer{
   border-bottom: 2px solid #f3f3f3;
@@ -44,7 +54,11 @@ h2 {
   color: green;
 }
 
-.tags .tag{
+.tags .tag-header{
+  font-weight: bold;
+}
+
+.tags .tag-name{
   display: inline-block;
   border-radius: 3px;
   background-color:#155674;
@@ -53,7 +67,16 @@ h2 {
   margin-right: 5px;
   font-size: 14px;
 }
-.add-entry      { font-size: 0.9em; border-bottom: 1px solid #ccc; }
+.add-question      {
+  font-size: 0.9em;
+  border-bottom: 1px solid #ccc;
+}
+
+.add-answer, .add-question{
+  display: none;
+  float: none;
+}
+
 .add-entry dl   { font-weight: bold; }
 .metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
                   margin-bottom: 1em; background: #fafafa; }
