--- a/project/templates/question.html
+++ b/project/templates/question.html
@@ -1,15 +1,17 @@
 {% extends "layout.html" %}
 {% block body %}
-  <p>
-    {{q}}
-  </p>
+{% if session.logged_in %}
+  {% include "forms/answer_form.html" %}
+{% endif %}
   <h2> Question </h2>
+
   <div class="row question">
-    {{ question[0] }}
+    {{ question[0] | safe}}
   </div>
   <div class="row tags">
+    <span class="tag-header"> Tags: </span>
     {% for tag in tags %}
-      <span class="tag">
+      <span class="tag-name">
         {{tag[0]}}
       </span>
     {% endfor %}
@@ -17,12 +19,12 @@
   <h2> Answers </h2>
   {% for a in answers %}
     <div class="row answer
-    {% if  a[0] == 1 %}
+    {% if  a[0] == question[1] %}
       correct
     {% endif %}
     ">
 
-      {{ a[1] }}
+      {{ a[1] | safe }}
     </div>
   {% endfor %}
 {% endblock %}
