--- a/project/templates/show_entries.html
+++ b/project/templates/show_entries.html
@@ -13,13 +13,6 @@
   {% else %}
     <div><em>Unbelievable.  No entries here so far</em></div>
   {% endfor %}
-
-    <!-- <ul class="pagination">
-      <li><a href="#">1</a></li>
-      <li><a href="#">2</a></li>
-      <li><a href="#">3</a></li>
-      <li><a href="#">4</a></li>
-      <li><a href="#">5</a></li>
-    </ul> -->
+  {% include "forms/pager_form.html" %}
   </div>
 {% endblock %}
