--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -15,7 +15,11 @@
   {% endif %}
   </div>
   {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
+    <!-- <div class="flash"></div> -->
+    <div class="alert alert-success" role="alert">
+      <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+      {{ message }}
+    </div>
   {% endfor %}
   {% block body %}{% endblock %}
   <script type=text/javascript src="{{url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
