--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -1,3 +1,7 @@
+body{
+  background-color: #f5f5f5;
+}
+
 a, h1, h2       { color: #377BA8; }
 h1, h2  {
   font-family: 'HelveticaNeue', Helvetica, serif;
@@ -20,7 +24,11 @@ h2 {
   background: white;
   font-size: 1.4em;
 }
-
+/*.row.question-row{
+  height:50px;
+  border: 1px solid gray;
+  border-radius: 3px;
+}*/
 .questions {
   margin: 0;
   padding: 0;
@@ -29,10 +37,13 @@ h2 {
 .questions .row, .answer, h2, .question, .tags, .button-row, .btn-pager{
   margin: 8px;
 }
+.questions .question-row{
+  border-bottom: 1px solid gray;
+}
 .questions .row input{
   background: white;
   border: none;
-  text-decoration: underline;
+  /*text-decoration: underline;*/
   color: #155674;
   width: 100%;
   white-space: nowrap;
@@ -41,6 +52,24 @@ h2 {
   display:none;
   text-align: left;
 }
+
+.filter-form .row{
+  margin-bottom: 15px;
+}
+.filter-form label:not(.radio-inline){
+  display: block;
+}
+/*.questions .row div{
+  background: white;
+  border-bottom: 1px solid gray;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display:none;
+  text-align: left;
+}*/
+
 
 /*.question{
   display: none;
