--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -4,8 +4,12 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-select.min.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
+<!-- <link rel="icon" href="data:;base64,iVBORw0KGgo="> -->
+<!-- <link rel="shortcut icon" href="https://s3.amazonaws.com/django-blog/ico/favicon_v2.ico"> -->
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
-<div class="page col-md-8 col-md-offset-2">
+
+<div class="page col-md-10 col-md-offset-1">
   <h1>CMPE 226 Final Project</h1>
   <div class="metanav">
   {% if not session.logged_in %}
