--- a/project/templates/show_entries.html
+++ b/project/templates/show_entries.html
@@ -1,17 +1,19 @@
 {% extends "layout.html" %}
 {% block body %}
+  {% include "forms/filter_form.html" %}
+
+  <div class="questions col-md-8">
   {% if session.logged_in %}
     {% include "forms/question_form.html" %}
   {% endif %}
-  <div class="questions">
   {% for entry in entries %}
     <form role="form" method="GET" action="{{ url_for('show_question',question_id=entry[2]) }}">
-      <div class="row">
+      <div class="row question-row"> 
         <input type="submit" value="{{ entry[1] }}"></button>
       </div>
     </form>
   {% else %}
-    <div><em>Unbelievable.  No entries here so far</em></div>
+    <div><em>Unbelievable. No entries here so far</em></div>
   {% endfor %}
   {% include "forms/pager_form.html" %}
   </div>
