--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -132,6 +132,11 @@ h2 {
   display: none;
 }
 
+/*calendar*/
+.calendar-inputs > div{
+  display: inline-block;
+}
+
 .add-entry dl   { font-weight: bold; }
 .metanav        { text-align: right; font-size: 0.8em; padding: 0.3em;
                   margin-bottom: 1em; background: #fafafa; }
