--- a/project/templates/show_admin_entries.html
+++ b/project/templates/show_admin_entries.html
@@ -1,5 +1,6 @@
-{% extends "admin.html" %}
+{% extends "layout.html" %}
 {% block body %}
+{% include "forms/calendar_form.html" %}
   <div class="questions">
   {% for entry in entries %}
     <form role="form" method="GET" action="{{ url_for('show_question',question_id=entry[2]) }}">
