--- a/project/templates/show_slice_entries.html
+++ b/project/templates/show_slice_entries.html
@@ -1,6 +1,5 @@
-{% extends "layout.html" %}
+{% extends "slice.html" %}
 {% block body %}
-{% include "forms/calendar_form.html" %}
   <div class="question-table">
   <table class="table table-striped">
     <thead>
@@ -12,7 +11,6 @@
     <tbody>
       {% for entry in slices %}
       <tr>
-        <form role="form" method="GET" action="{{ url_for('show_question',question_id=entry[2]) }}">
             <td>{{ entry[0] }}</td>
             <td>{{ entry[1] }}</td>
             <td>{{ entry[2] }}</td>
