--- a/project/templates/show_entries.html
+++ b/project/templates/show_entries.html
@@ -1,7 +1,6 @@
 {% extends "layout.html" %}
 {% block body %}
   {% include "forms/filter_form.html" %}
-
   <div class="questions col-md-8">
   {% if session.logged_in %}
     {% include "forms/question_form.html" %}
@@ -16,5 +15,9 @@
     <div><em>Unbelievable. No entries here so far</em></div>
   {% endfor %}
   {% include "forms/pager_form.html" %}
+  </div>
+  <div class="col-md-12">
+  {% include "forms/slice_form.html" %}
+  {% include "forms/dice_form.html" %}
   </div>
 {% endblock %}
