--- a/project/templates/show_search_entries.html
+++ b/project/templates/show_search_entries.html
@@ -1,29 +1,19 @@
-{% extends "layout.html" %}
+{% extends "search.html" %}
 {% block body %}
-{% include "forms/calendar_form.html" %}
-  <div class="question-table">
-  <table class="table table-striped">
-    <thead>
-      <th>Tag</th>
-      <th>Username</th>
-      <th>Year</th>
-      <th><Count/th>
-    </thead>
-    <tbody>
-      {% for entry in slices %}
-      <tr>
-        <form role="form" method="GET" action="{{ url_for('show_question',question_id=entry[2]) }}">
-            <td>{{ entry[0] }}</td>
-            <td>{{ entry[1] }}</td>
-            <td>{{ entry[2] }}</td>
-            <td>{{ entry[3] }}</td>
-        </form>
-      </tr>
-      {% else %}
-        <div><em>Unbelievable. No entries here so far</em></div>
-      {% endfor %}
-    </tbody>
-  </table>
-
+  {% if session.logged_in %}
+    {% include "forms/question_form.html" %}
+  {% endif %}
+  <div class="questions">
+  {% for entry in entries %}
+    <form role="form" method="GET" action="{{ url_for('show_question',question_id=entry[2]) }}">
+      <div class="row">
+        <input type="submit" value="{{ entry[1] }}"></button>
+      </div>
+    </form>
+  {% else %}
+    <div><em>Unbelievable.  No entries here so far</em></div>
+  {% endfor %}
+  {% include "forms/search_pager_form.html" %}
   </div>
 {% endblock %}
+0
