--- a/project/templates/show_slice_entries.html
+++ b/project/templates/show_slice_entries.html
@@ -1,27 +1,28 @@
-{% extends "slice.html" %}
+{% extends "layout.html" %}
 {% block body %}
-  <div class="question-table">
+<div class="question-table">
+<h3> Number of questions posted in selected year for each user by tag</h3>
   <table class="table table-striped">
     <thead>
       <th>Tag</th>
       <th>Username</th>
       <th>Year</th>
-      <th><Count/th>
+      <th>Count</th>
     </thead>
     <tbody>
-      {% for entry in slices %}
+      {% for entry in entries %}
       <tr>
-            <td>{{ entry[0] }}</td>
-            <td>{{ entry[1] }}</td>
-            <td>{{ entry[2] }}</td>
-            <td>{{ entry[3] }}</td>
-        </form>
-      </tr>
-      {% else %}
-        <div><em>Unbelievable. No entries here so far</em></div>
-      {% endfor %}
-    </tbody>
-  </table>
+        <td>{{ entry[0] }}</td>
+        <td>{{ entry[1] }}</td>
+        <td>{{ entry[2] }}</td>
+        <td>{{ entry[3] }}</td>
+      </form>
+    </tr>
+    {% else %}
+    <div><em>Unbelievable. No entries here so far</em></div>
+    {% endfor %}
+  </tbody>
+</table>
 
-  </div>
+</div>
 {% endblock %}
