--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -15,7 +15,7 @@
   <h1>CMPE 226 Final Project</h1>
   <div class="metanav">
     <div class="row">
-      <form role="form" method="POST" action="{{ url_for('search_text') }}">
+      <form role="form" method="POST" action="{{ url_for('search') }}">
         <input type="text" name="search" placeholder="Search text" class="form-control search_bar" id="search_bar">
         <button class="btn btn-default btn-md search_button" id="search_button" type="submit">Search</button>
       </form>
