--- a/project/templates/show_search_entries.html
+++ b/project/templates/show_search_entries.html
@@ -13,7 +13,7 @@
   {% else %}
     <div><em>Unbelievable.  No entries here so far</em></div>
   {% endfor %}
-  {% include "forms/search_pager_form.html" %}
+  <!-- {% include "forms/search_pager_form.html" %} -->
   </div>
 {% endblock %}
 0
