left align question text

--- a/project/templates/forms/calendar_form.html
+++ b/project/templates/forms/calendar_form.html
@@ -17,7 +17,7 @@
       <label>Year</label>
       <div class="col-md-10">
         <select class="selectpicker" id="year-picker" name="year" data-live-search="true">
-          <option data-tokens="2014" value="2014">2014</option>
+          <!-- <option data-tokens="2014" value="2014">2014</option> -->
           <option data-tokens="2015" value="2015">2015</option>
           <option data-tokens="2016" value="2016">2016</option>
         </select>
