Pagination for dice page

--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='fonts/font-awesome-4.7.0/css/font-awesome.min.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-select.min.css') }}">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/datatables.bootstrap.min.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/animation.css') }}">
 
@@ -37,6 +38,8 @@
   <script type=text/javascript src="{{url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
   <script type=text/javascript src="{{url_for('static', filename='js/bootstrap.min.js') }}"></script>
   <script type=text/javascript src="{{url_for('static', filename='js/bootstrap-select.min.js') }}"></script>
+  <script type=text/javascript src="{{url_for('static', filename='js/jquery.dataTables.min.js') }}"></script>
+  <script type=text/javascript src="{{url_for('static', filename='js/dataTables.bootstrap.min.js') }}"></script>
   <script type=text/javascript src="{{url_for('static', filename='js/helper.js') }}"></script>
   <script type=text/javascript src="{{url_for('static', filename='js/main.js') }}"></script>
 
