--- a/project/templates/show_dice_entries.html
+++ b/project/templates/show_dice_entries.html
@@ -3,7 +3,7 @@
 <div class="question-table">
 <h3> Number of times users talked about this beer type by month </h3>
 </br>
-  <table class="table table-striped">
+  <table class="table table-striped" id="dice-table">
     <thead>
       <th>Month</th>
       <th>Count</th>
