--- a/project/templates/layout.html
+++ b/project/templates/layout.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>CMPE 226 Final Project</title>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='fonts/font-awesome-4.7.0/css/font-awesome.min.css') }}">
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-select.min.css') }}">
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/datatables.bootstrap.min.css') }}">
